--- a/templates/Index.html
+++ b/templates/Index.html
@@ -3,13 +3,15 @@
 {% block contenido %}
     <div class="content">
         <h1 class="title">Event Manager </h1>
-        <img src="/static/img/mobile-app.png" alt="">
+        <img src="{% static 'img/mobile-app.png' %}" alt="">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad architecto atque cum, ea eveniet
             excepturi maxime quis, reiciendis sequi sit tempore veniam voluptas. Explicabo facilis ipsum non officiis
             rem.
         </p>
-        <img src="/static/img/google-play-button.png" alt="" class="app-button">
-        <img src="/static/img/iStore-button.png" alt="" class="app-button">
+
+        <img src="{% static 'img/google-play-button.png' %}" alt="" class="app-button">
+        <img src="{% static 'img/iStore-button.png' %}" alt="" class="app-button">
+
     </div>
 {% endblock %}
