Nuevo servicio para filtrado de eventos por categorias

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block contenido %}
     <div class="content">
-        <h1 class="title">Event Manager </h1>
+        <h1 class="title">FarrasEC</h1>
         <img src="{% static 'img/mobile-app.png' %}" alt="">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad architecto atque cum, ea eveniet
